// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarItem should render 1`] = `
<DocumentFragment>
  <div
    class="relative cursor-pointer"
    data-testid="side-menu__item--plugin"
  >
    <li
      class="flex items-center py-5 pr-8 pl-10 rounded h-15"
    >
      <div
        class="mr-3 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        />
      </div>
      <span
        class="text-lg font-semibold"
      >
        General
      </span>
    </li>
  </div>
</DocumentFragment>
`;

exports[`SideBarItem should render as active 1`] = `
<DocumentFragment>
  <div
    class="relative cursor-pointer"
    data-testid="side-menu__item--plugin"
  >
    <li
      class="flex items-center py-5 pr-8 pl-10 rounded h-15 text-theme-primary-600 bg-theme-primary-100 dark:text-theme-secondary-200 dark:bg-theme-secondary-800"
    >
      <div
        class="absolute top-0 bottom-0 left-0 w-2 rounded bg-theme-primary-600"
      />
      <div
        class="mr-3"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        />
      </div>
      <span
        class="text-lg font-semibold"
      >
        General
      </span>
    </li>
  </div>
</DocumentFragment>
`;
